--- a/views/home.html
+++ b/views/home.html
@@ -5,40 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera pagina web</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <!--Nombre de la página-->
+    <title>Berenjena frustrada</title>
+    <!-- Vincular hoja  de estilos -->
+    <link rel="stylesheet" href="/css/home.css">
+
+    <!-- Fuentes -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Roboto:wght@500&display=swap" rel="stylesheet">
+
+    <!-- Icono -->
+    <link rel="shortcut icon" href="/images/0001.png">
 </head>
 
 <body>
+    <!-- Cabezera -->
     <header>
-        <h1>Hola mundito</h1>
-        <nav>
+        <!-- Icono y titulo -->
+        <div class="titulo">
+            <a href="/">
+                <img src="/images/0001.png" alt="" class="logo">
+                <h1> La Berenjena frustrada </h1>
+            </a>
+        </div>
+
+        <!-- Barra de navegación -->
+        <nav class='navegacion'>
             <ul>
-                <li><a href="">Inicio</a> | </li>
-                <li><a href="">Productos</a> | </li>
-                <li><a href="">Nosotros</a> | </li>
-                <li><a href="">Ingresar </a> | </li>
-                <li><a href="">Registrate</a></li>
+                <li><a href="" >inicio</a> | </li>
+                <li><a href="" >nosotros</a> | </li>
+                <li><a href="" >contacto</a> | </li>
+                <li><a href="" >redes</a></li>
             </ul>
+
         </nav>
     </header>
+
     <main>
-        <section>
-            <article>
-
-            </article>
-            <article>
-
-            </article>
-            <article>
-
-            </article>
-        </section>
+        <!--Contenido de la página-->
     </main>
-
+    <!-- Pie de la página -->
     <footer>
-
+        <section>
+            <ul>
+                <li><a href="">contacto</a></li>
+                <li><a href="">nosotros</a></li>
+                <li><a href="">ubicacion</a></li>
+                <li><a href="">redes</a></li>
+                <li><a href="">discord</a></li>
+            </ul>
+        </section>
     </footer>
+
+
+
 
 </body>
 
