--- a/views/home.html
+++ b/views/home.html
@@ -13,6 +13,7 @@
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
 
     <!-- Icono -->
     <link rel="shortcut icon" href="/images/0001.png">
@@ -45,15 +46,27 @@
         <!--Contenido de la página-->
     </main>
     <!-- Pie de la página -->
-    <footer>
+    <footer class="piepagina">
         <section>
+            <h4>Berenjenas</h4>
             <ul>
-                <li><a href="">contacto</a></li>
-                <li><a href="">nosotros</a></li>
-                <li><a href="">ubicacion</a></li>
-                <li><a href="">redes</a></li>
-                <li><a href="">discord</a></li>
+                <li><a href="">Quienes somos</a></li>
+                <li><a href="">Preguntas Frecuentes</a></li>
+                <li><a href="">Whatsapp</a></li>
+                <li><a href="">Formas de pago</a></li>
             </ul>
+        </section>
+        <section>
+            <h4>Compra Online</h4>
+            <ul>
+                <li><a href="">Términos y condiciones</a></li>
+                <li><a href="">Políticas de cambio</a></li>
+                <li><a href="">Arrepentimiento de compra</a></li>
+            </ul>
+        </section>
+        <section>
+            <h4>Contacto</h4>
+            <button>Enviar mensaje</button>
         </section>
     </footer>
 
