--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,11 @@
 *{
     margin: 0;
+    padding:0;
     font-family: 'Source Sans Pro', sans-serif;
+}
+
+body{
+  background-color: #252525;
 }
 
 header{
@@ -11,7 +16,11 @@ header{
   justify-content: space-between;      /* le da una ubicacion ordenada a los elementos que esten dentro */
   align-items: center;          /*centra los elementos*/
   text-transform: uppercase;
-  box-shadow: black ;
+  box-shadow: 0px 0px 18px 0px rgba(190, 0, 207, 0.7);
+}
+
+header:hover{
+  box-shadow: 0px 0px 18px 0px rgba(0, 179, 54, 0.9)
 }
 
 .logo{
@@ -35,9 +44,14 @@ a:hover{
 }
 
 .navegacion ul{
-  margin: 0 1em;
-  font-size: 1.1em
+  margin-right: 1em;
+  font-size: 1.3em
 }
+
+.navegacion ul li{
+  border-right: 1px solid #07c900;
+}
+
 .navegacion ul li a{
   font-family: 'Roboto', sans-serif;
   padding: 0.3em;
@@ -50,11 +64,11 @@ a{
 
 h1{
   font-family: 'Do Hyeon', sans-serif;
-  font-size: 1.5em;
+  font-size: 1.4em;
 }
 
 main{
-  height: 35em;
+  height: 25em;
 }
 
 footer{
@@ -63,9 +77,7 @@ footer{
   /*flex-direction: column;*/
   /*justify-content: center;    justify mueve vertical */
   align-items:flex-start;        /* y align horizontal */
-  font-size: 1.5em;
-     
-
+  font-size: 1.3em;
 }
 
 .piepagina{
@@ -82,3 +94,40 @@ footer{
 .piepagina ul{
     padding: 0;
 }
+
+.buscador{
+  width: 23em;
+  height: auto;
+  border-radius: .5em 0 0 .5em;
+  padding-left: .5em
+
+}
+
+.formsearch{
+  height:2em;
+  display:flex;
+  align-items:center;
+  border-color: transparent;
+}
+
+.botonbuscar{
+  height:2.31em;
+  padding: 0 .8em;
+  background-color: blueviolet;
+  color:whitesmoke;
+  border-radius: 0 .5em .5em 0;
+  border-color: transparent;
+}
+
+.redes ul{
+  display:flex;
+  margin: .5em 0;
+  padding-inline-start: 0px;
+}
+
+.redes ul li a i{
+  margin-right:.3em;
+  font-size: 1.5em;
+}
+
+
