--- a/views/home.html
+++ b/views/home.html
@@ -10,6 +10,9 @@
     <!-- Vincular hoja  de estilos -->
     <link rel="stylesheet" href="/css/home.css">
 
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/76d25d6fff.js" crossorigin="anonymous"></script>
+
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -26,17 +29,26 @@
         <div class="titulo">
             <a href="/">
                 <img src="/images/0001.png" alt="" class="logo">
-                <h1> La Berenjena frustrada </h1>
+                <h1> La Berenjena frustrada</h1>
             </a>
+        </div>
+
+        <!-- Buscador -->
+        <div>
+            <form action="" class="formsearch">
+                <input type="text" class="buscador formsearch" placeholder="Buscar berenjena">
+                <button class="formsearch botonbuscar"><i class="fas fa-search"></i></button>
+            </form>
         </div>
 
         <!-- Barra de navegación -->
         <nav class='navegacion'>
             <ul>
-                <li><a href="" >inicio</a> | </li>
-                <li><a href="" >nosotros</a> | </li>
-                <li><a href="" >contacto</a> | </li>
-                <li><a href="" >redes</a></li>
+                <li><a href="" >inicio</a></li>
+                <li><a href="" >nosotros</a></li>
+                <li><a href="" >contacto</a></li>
+                <li><a href="" >ingresar</a></li>
+                <li><a href="" >registrate</a></li>
             </ul>
 
         </nav>
@@ -67,6 +79,16 @@
         <section>
             <h4>Contacto</h4>
             <button>Enviar mensaje</button>
+            <div class="redes">
+                <ul>
+                    <li><a href=""><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href=""><i class="fab fa-discord"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram-square"></i></a></li>
+                    <li><a href=""><i class="fab fa-whatsapp-square"></i></a></li>
+
+                </ul>
+
+            </div>
         </section>
     </footer>
 
