--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,141 +1,2 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Source Sans Pro', sans-serif
-}
-
-body{
-  background-color: #999999
-}
-
-header{
-     /* height es el alto */
-  width: 100%;       /* Ancho del header */
-  background-color: #181818;
-  display: flex;   /* se hace flexible  para poder modificarlo como quieras*/
-  justify-content: space-between;      /* le da un orden a los elementos que esten dentro de */
-  align-items: center;          /* en el centro del header */
-  text-transform: uppercase;
-  box-shadow: 0px 0px 18px 0px rgba(190, 0, 207, 0.7)
-
-}
-
-header:hover{
-  box-shadow: 0px 0px 18px 0px rgba(0, 179, 54, 0.9)
-}
-
-.logo{
-  height: 5em;
-  width: auto;
-}
-
-.titulo a, .navegacion ul{
-  display: flex;
-  align-items: center;
-  
-}
-
-ul li{
-  padding: 0.3em;
-  list-style: none;
-  font-family: 'Roboto', sans-serif;
-  
-}
-a:hover{
-  color: crimson;
-
-}
-
-.navegacion ul{
-  margin-right: 1em;
-  font-size: 1em
-} 
-
-.navegacion ul li{
-  border-right: 2px solid red;
-}
-
-.navegacion ul li a{
-  font-family: 'Roboto', sans-serif;
-  font-size: .6em;
-}
-
-a{
-  text-decoration: none;       /* sacamos subrayado de las palabras */
-
-}
-
-h1{
-  font-family: 'Do Hyeon', sans-serif;
-}
-
-main{
-  height: 35em;
-}
-
-footer{
-  height: auto;
-  background-color: #181818;
-  /*flex-direction: column;*/
-  /*justify-content: center;    justify mueve vertical */
-  align-items:flex-start;        /* y align horizontal */
-  font-size: 1.1em;
-}
-
-.piepagina{
-  display: flex;
-  justify-content: space-between;
-  text-align: start;
-  padding: 1.5em 1em;
-}
-
-.piepagina h4{
-  color: whitesmoke
-}
-
-.buscador{
-  width: 23em;
-  height: auto;
-  border-radius: .5em 0 0 .5em;
-  padding-left: .5em;
-
-}
-
-.formsearch{
-  height:2em;
-  display:flex;
-  align-items:center;
-  border-color: transparent;
-}
-
-.botonbuscar{
-  height:2.31em;
-  padding: 0 .8em;
-  background-color: white;
-  color:black;
-  border-radius: 0 .5em .5em 0;
-  border-color: transparent;
-}
-
-.redes ul li{
-  color:whitesmoke;
-  display:flex;
-  flex-direction:row;
-  justify-content: flex-end;
-}
-
-/* netbook y notebook */
-@media (min-width:1024px) {
-  ul li{
-    color: green;
-    font-size: 1.3em
-  }
-
-  .titulo a{
-    color: orange;
-  }
-
-  h1{
-    font-size:1.5em
-  }
-}
+@import "./bootstrap.css";
+@import "./home.css"
