--- a/views/home.html
+++ b/views/home.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Nombre de la página-->
     <title>Berenjena frustrada</title>
-    <!-- Vincular hoja  de estilos -->
-    <link rel="stylesheet" href="/css/home.css">
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/76d25d6fff.js" crossorigin="anonymous"></script>
@@ -18,13 +16,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
 
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+
+    <!-- Vincular hoja  de estilos -->
+    <link rel="stylesheet" href="/css/style.css">
+
     <!-- Icono -->
     <link rel="shortcut icon" href="/images/0001.png">
 </head>
 
 <body>
     <!-- Cabezera -->
-    <header>
+    <header class="container-fluid justify-content-between">
         <!-- Icono y titulo -->
         <div class="titulo">
             <a href="/">
@@ -32,7 +40,6 @@
                 <h1> La Berenjena frustrada</h1>
             </a>
         </div>
-
         <!-- Buscador -->
         <div>
             <form action="" class="formsearch">
@@ -40,20 +47,72 @@
                 <button class="formsearch botonbuscar"><i class="fas fa-search"></i></button>
             </form>
         </div>
-
         <!-- Barra de navegación -->
-        <nav class='navegacion'>
-            <ul>
-                <li><a href="" >inicio</a></li>
-                <li><a href="" >nosotros</a></li>
-                <li><a href="" >contacto</a></li>
-                <li><a href="" >ingresar</a></li>
-                <li><a href="" >registrate</a></li>
-            </ul>
+
+        <nav class="navegacion navbar navbar-expand-lg navbar-dark">
+            <div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02"></div>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class ="nav-item"><a href="" class="nav-link">inicio</a></li>
+                        <li class ="nav-item"><a href="" class="nav-link">nosotros</a></li>
+                        <li class ="nav-item"><a href="" class="nav-link">contacto</a></li>
+                        <li class ="nav-item"><a href="" class="nav-link">ingresar</a></li>
+                        <li class ="nav-item"><a href="" class="nav-link">registrate</a></li>
+                    </ul>
+                </div>
+                
+            </div>
 
         </nav>
-    </header>
+        <script src="https://code.jquery.com/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+
+        <!--<nav class='navegacion'>
+            <ul>
+                <li><a href="">inicio</a></li>
+                <li><a href="">nosotros</a></li>
+                <li><a href="">contacto</a></li>
+                <li><a href="">ingresar</a></li>
+                <li><a href="">registrate</a></li>
+            </ul>
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Navbar</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+
+        </nav>-->
+    </header>
     <main>
         <!--Contenido de la página-->
     </main>
@@ -85,16 +144,10 @@
                     <li><a href=""><i class="fab fa-discord"></i></a></li>
                     <li><a href=""><i class="fab fa-instagram-square"></i></a></li>
                     <li><a href=""><i class="fab fa-whatsapp-square"></i></a></li>
-
                 </ul>
-
             </div>
         </section>
     </footer>
-
-
-
-
 </body>
 
 </html>
