--- a/views/home.html
+++ b/views/home.html
@@ -52,26 +52,26 @@
         <nav class="navegacion navbar navbar-expand-lg navbar-dark">
             <div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02"></div>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class ="nav-item"><a href="" class="nav-link">inicio</a></li>
-                        <li class ="nav-item"><a href="" class="nav-link">nosotros</a></li>
-                        <li class ="nav-item"><a href="" class="nav-link">contacto</a></li>
-                        <li class ="nav-item"><a href="" class="nav-link">ingresar</a></li>
-                        <li class ="nav-item"><a href="" class="nav-link">registrate</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">inicio</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">nosotros</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">contacto</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">ingresar</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">registrate</a></li>
                     </ul>
                 </div>
-                
+
             </div>
 
         </nav>
         <script src="https://code.jquery.com/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 
         <!--<nav class='navegacion'>
@@ -115,6 +115,48 @@
     </header>
     <main>
         <!--Contenido de la página-->
+        <!-- productos -->
+        <div class="titulo-vendidos mas-vendidos">
+            <h2>Los mas vendidos</h2>
+        </div>
+        <div class="contenedor-articulo">
+            
+            <article class="article-product">
+                <a href="">
+                    <img src="/images/berenjena.jpg" alt="Berenjena 1">
+                </a>
+                <h3>Berenjena funny</h3>
+                <p>Despertador berenjena con alarma graciosa.</p>
+                <h6>$1.000</h6>
+                <span>-20%</span>
+                <button><a href="/productDetail.html">Ver producto</a></button>
+                <button><a href="/productCart.html">Carrito</a></button>
+            </article>
+            <article class="article-product">
+                <a href="">
+                    <img src="/images/berenjena.jpg" alt="Berenjena 1">
+                </a>
+                <h3>Berenjena funny</h3>
+                <p>Despertador berenjena con alarma graciosa.</p>
+                <h6>$1.000</h6>
+                <span>-20%</span>
+                <button><a href="/productDetail.html">Ver producto</a></button>
+                <button><a href="/productCart.html">Carrito</a></button>
+            </article>
+            <article class="article-product">
+                <a href="">
+                    <img src="/images/berenjena.jpg" alt="Berenjena 1">
+                </a>
+                <h3>Berenjena funny</h3>
+                <p>Despertador berenjena con alarma graciosa.</p>
+                <h6>$1.000</h6>
+                <span>-20%</span>
+                <button><a href="/productDetail.html">Ver producto</a></button>
+                <button><a href="/productCart.html">Carrito</a></button>
+            </article>
+
+        </div>
+
     </main>
     <!-- Pie de la página -->
     <footer class="piepagina">
