--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,12 +1,12 @@
 *{
     margin: 0;
-    padding:0;
+    padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
 /* Comienzo cuerpo de la pagina + elementos generales*/
 body{
-  background-color: #252525;
+  background-color: #f1f1f1a6;
 }
 a{
   text-decoration: none;       /* sacamos subrayado de las palabras linkeadas*/
@@ -70,7 +70,7 @@ a{
 .titulo a, .navegacion ul{
   display: flex;
   align-items: center;
-}
+} 
 
 .navegacion ul{
   font-size: 1.2em
@@ -150,55 +150,74 @@ footer{
 
 @media (min-width:320px) and (max-width:425px){
   .buscador{
-    width:2em;
-    background-color: darkblue;
+    width:5em;
   }
-
 }
 
 @media (min-width:1024px){
   .buscador{
     width: 15em;
   }
-
 }
 
-/*productos*/
- main{
-  margin: 2em 8em;
-}
 
 /*Modificacion del titulo*/
 .mas-vendidos h2{
   text-align: center;
   text-transform: uppercase;
+  font-size: 1.3em;
+  margin:0
 }
 
 .titulo-vendidos{
   color: blueviolet;
   background-color: #181818;
-  border-radius: 1em;
-  padding: .5em;
+  border-radius: .3em;
+  padding: .2em 0;
   width: 50%;
   display: flex;
+  margin: 1em 0 1em 25%;
   justify-content: center;
   align-items: center;
-  margin-left: 25%;
+}
+
+main{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 /*imagen de articulo*/
 .article-product a img{
   width: 100%;
 }
+
+.contenedor-section {
+  border-radius: 0.2em;
+  background-color: #fff;
+  border: #e2e2e2 1px solid;
+  padding: 1em;
+  margin-bottom: 1em;
+}
   
 /*articulo*/
 .article-product{
-  width: 12em;
   height: 25em;
-  padding: .5em;
+  padding: .2em;
   background-color: #181818;
-  border-radius: 1em;
+  border-radius: .3em;
   box-shadow: 0px 0px 18px 0px rgba(190, 0, 207, 0.7);
+  margin: auto;
+  width: 16%;
+}
+
+
+.article-product:last-child{
+  margin-right:0
+}
+
+.article-product a img{
+  height:10em
 }
 
 .article-product:hover{
