--- a/views/home.html
+++ b/views/home.html
@@ -47,6 +47,8 @@
                 <button class="formsearch botonbuscar"><i class="fas fa-search"></i></button>
             </form>
         </div>
+
+
         <!-- Barra de navegación -->
 
         <nav class="navegacion navbar navbar-expand-lg navbar-dark">
@@ -70,8 +72,6 @@
             </div>
 
         </nav>
-        <script src="https://code.jquery.com/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 
         <!--<nav class='navegacion'>
@@ -115,15 +115,73 @@
     </header>
     <main>
         <!--Contenido de la página-->
-        <!-- productos -->
-        <div class="titulo-vendidos mas-vendidos">
+        
+        <div class="container titulo-vendidos mas-vendidos">
             <h2>Los mas vendidos</h2>
         </div>
-        <div class="contenedor-articulo">
-            
+
+        <!-- productos -->
+        <section class="container">
+            <div class="row contenedor-section">
+                <article class="col-6 col-md-3 col-lg-2 article-product">
+                    <a href="/productDetail.html"><img src="/images/berenjena.jpg" alt="berenjena1"></a>
+                    <h3>Berenjena funny</h3>
+                    <p>Despertador berenjena con alarma graciosa.</p>
+                    <h6>$1.000</h6>
+                    <span>-20%</span>
+                    <button><a href="/productDetail.html">Ver producto</a></button>
+                    <button><a href="/productCart.html">Carrito</a></button>
+                </article>
+
+                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img src="/images/berenjena-china.jpg" alt="berenjena1"></a>
+                    <h3>Berenjena funny</h3>
+                    <p>Despertador berenjena con alarma graciosa.</p>
+                    <h6>$1.000</h6>
+                    <span>-20%</span>
+                    <button><a href="/productDetail.html">Ver producto</a></button>
+                    <button><a href="/productCart.html">Carrito</a></button></article>
+                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img src="/images/berenjena coraje.jpg" alt="berenjena1"></a>
+                    <h3>Berenjena funny</h3>
+                    <p>Despertador berenjena con alarma graciosa.</p>
+                    <h6>$1.000</h6>
+                    <span>-20%</span>
+                    <button><a href="/productDetail.html">Ver producto</a></button>
+                    <button><a href="/productCart.html">Carrito</a></button></article>
+                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img src="/images/Brujo.png" alt="berenjena1"></a>
+                    <h3>Berenjena funny</h3>
+                    <p>Despertador berenjena con alarma graciosa.</p>
+                    <h6>$1.000</h6>
+                    <span>-20%</span>
+                    <button><a href="/productDetail.html">Ver producto</a></button>
+                    <button><a href="/productCart.html">Carrito</a></button></article>
+                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img src="/images/escabeche.jpg" alt="berenjena1"></a>
+                    <h3>Berenjena funny</h3>
+                    <p>Despertador berenjena con alarma graciosa.</p>
+                    <h6>$1.000</h6>
+                    <span>-20%</span>
+                    <button><a href="/productDetail.html">Ver producto</a></button>
+                    <button><a href="/productCart.html">Carrito</a></button></article>
+                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img src="/images/San-Jacobos-de-berenjena.jpg" alt="berenjena1"></a>
+                    <h3>Berenjena funny</h3>
+                    <p>Despertador berenjena con alarma graciosa.</p>
+                    <h6>$1.000</h6>
+                    <span>-20%</span>
+                    <button><a href="/productDetail.html">Ver producto</a></button>
+                    <button><a href="/productCart.html">Carrito</a></button></article>
+            </div>
+        </section>
+        
+        <!-- <div class="contenedor-articulo">
+
             <article class="article-product">
                 <a href="">
                     <img src="/images/berenjena.jpg" alt="Berenjena 1">
+                    <h3>Berenjena funny</h3>
+                    <p>Despertador berenjena con alarma graciosa.</p>
+                    <h6>$1.000</h6>
+                    <span>-20%</span>
+                    <button><a href="/productDetail.html">Ver producto</a></button>
+                    <button><a href="/productCart.html">Carrito</a></button>
                 </a>
                 <h3>Berenjena funny</h3>
                 <p>Despertador berenjena con alarma graciosa.</p>
@@ -132,6 +190,7 @@
                 <button><a href="/productDetail.html">Ver producto</a></button>
                 <button><a href="/productCart.html">Carrito</a></button>
             </article>
+
             <article class="article-product">
                 <a href="">
                     <img src="/images/berenjena.jpg" alt="Berenjena 1">
@@ -155,7 +214,7 @@
                 <button><a href="/productCart.html">Carrito</a></button>
             </article>
 
-        </div>
+        </div> -->
 
     </main>
     <!-- Pie de la página -->
@@ -190,6 +249,8 @@
             </div>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>z
 </body>
 
 </html>
