Se inserto un carrousel desde bootstrap y luego se lo modifico para que contenga articulos completos en vez de imagenes. Tambien se aplico a un div con un tamaño definido la propiedad overflow-y: scroll; para que su contenido no desborde y que se pueda, a traves de un scroll, deslizarse por su contenido

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -228,3 +228,11 @@ main{
   display: flex;
   justify-content: space-between;
 }
+/* caja hidden */
+.caja-hidden{
+
+  height: 10em;
+  width: 10em;
+  border: solid 1px green;
+  overflow-y: scroll;
+}
