--- a/views/home.html
+++ b/views/home.html
@@ -19,9 +19,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
+
 
     <!-- Vincular hoja  de estilos -->
     <link rel="stylesheet" href="/css/style.css">
@@ -114,8 +112,106 @@
         </nav>-->
     </header>
     <main>
+        <!-- caja -->
+        <div class="caja-hidden">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam optio nostrum dolor, veritatis possimus dolore enim molestiae vel, 
+                obcaecati laborum quo velit? Odio alias dolore perspiciatis veritatis quaerat consequuntur excepturi.
+            </p>
+        </div>
+        <!-- carousel -->
+        <div id="carouselExampleIndicators" class="carousel slide container " data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active d-flex">
+                    <section class="container">
+                        <div class="row contenedor-section">
+                            <article class="col-6 col-md-3 col-lg-2 article-product">
+                                <a href="/productDetail.html"><img src="/images/berenjena.jpg" alt="berenjena1"></a>
+                                <h3>Berenjena funny</h3>
+                                <p>Despertador berenjena con alarma graciosa.</p>
+                                <h6>$1.000</h6>
+                                <span>-20%</span>
+                                <button><a href="/productDetail.html">Ver producto</a></button>
+                                <button><a href="/productCart.html">Carrito</a></button>
+                            </article>
+
+                            <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
+                                        src="/images/berenjena-china.jpg" alt="berenjena1"></a>
+                                <h3>Berenjena funny</h3>
+                                <p>Despertador berenjena con alarma graciosa.</p>
+                                <h6>$1.000</h6>
+                                <span>-20%</span>
+                                <button><a href="/productDetail.html">Ver producto</a></button>
+                                <button><a href="/productCart.html">Carrito</a></button>
+                            </article>
+                            <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
+                                        src="/images/berenjena coraje.jpg" alt="berenjena1"></a>
+                                <h3>Berenjena funny</h3>
+                                <p>Despertador berenjena con alarma graciosa.</p>
+                                <h6>$1.000</h6>
+                                <span>-20%</span>
+                                <button><a href="/productDetail.html">Ver producto</a></button>
+                                <button><a href="/productCart.html">Carrito</a></button>
+                            </article>
+                        </div>
+                    </section>
+                    <!-- <img src="/images/banner-1.png" class="d-block w-50" alt="...">
+                <img src="/images/banner-2.png" class="d-block w-50 " alt="..."> -->
+                </div>
+                <div class="carousel-item">
+                    <section class="container">
+                        <div class="row contenedor-section">
+                            <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
+                                        src="/images/Brujo.png" alt="berenjena1"></a>
+                                <h3>Berenjena funny</h3>
+                                <p>Despertador berenjena con alarma graciosa.</p>
+                                <h6>$1.000</h6>
+                                <span>-20%</span>
+                                <button><a href="/productDetail.html">Ver producto</a></button>
+                                <button><a href="/productCart.html">Carrito</a></button>
+                            </article>
+                            <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
+                                        src="/images/escabeche.jpg" alt="berenjena1"></a>
+                                <h3>Berenjena funny</h3>
+                                <p>Despertador berenjena con alarma graciosa.</p>
+                                <h6>$1.000</h6>
+                                <span>-20%</span>
+                                <button><a href="/productDetail.html">Ver producto</a></button>
+                                <button><a href="/productCart.html">Carrito</a></button>
+                            </article>
+                            <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
+                                        src="/images/San-Jacobos-de-berenjena.jpg" alt="berenjena1"></a>
+                                <h3>Berenjena funny</h3>
+                                <p>Despertador berenjena con alarma graciosa.</p>
+                                <h6>$1.000</h6>
+                                <span>-20%</span>
+                                <button><a href="/productDetail.html">Ver producto</a></button>
+                                <button><a href="/productCart.html">Carrito</a></button>
+                            </article>
+                        </div>
+                    </section>
+                    <!-- <img src="/images/banner-2.png" class="d-block w-50" alt="..."> -->
+                </div>
+
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
         <!--Contenido de la página-->
-        
+
         <div class="container titulo-vendidos mas-vendidos">
             <h2>Los mas vendidos</h2>
         </div>
@@ -133,44 +229,54 @@
                     <button><a href="/productCart.html">Carrito</a></button>
                 </article>
 
-                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img src="/images/berenjena-china.jpg" alt="berenjena1"></a>
+                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
+                            src="/images/berenjena-china.jpg" alt="berenjena1"></a>
                     <h3>Berenjena funny</h3>
                     <p>Despertador berenjena con alarma graciosa.</p>
                     <h6>$1.000</h6>
                     <span>-20%</span>
                     <button><a href="/productDetail.html">Ver producto</a></button>
-                    <button><a href="/productCart.html">Carrito</a></button></article>
-                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img src="/images/berenjena coraje.jpg" alt="berenjena1"></a>
+                    <button><a href="/productCart.html">Carrito</a></button>
+                </article>
+                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
+                            src="/images/berenjena coraje.jpg" alt="berenjena1"></a>
                     <h3>Berenjena funny</h3>
                     <p>Despertador berenjena con alarma graciosa.</p>
                     <h6>$1.000</h6>
                     <span>-20%</span>
                     <button><a href="/productDetail.html">Ver producto</a></button>
-                    <button><a href="/productCart.html">Carrito</a></button></article>
-                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img src="/images/Brujo.png" alt="berenjena1"></a>
+                    <button><a href="/productCart.html">Carrito</a></button>
+                </article>
+                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
+                            src="/images/Brujo.png" alt="berenjena1"></a>
                     <h3>Berenjena funny</h3>
                     <p>Despertador berenjena con alarma graciosa.</p>
                     <h6>$1.000</h6>
                     <span>-20%</span>
                     <button><a href="/productDetail.html">Ver producto</a></button>
-                    <button><a href="/productCart.html">Carrito</a></button></article>
-                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img src="/images/escabeche.jpg" alt="berenjena1"></a>
+                    <button><a href="/productCart.html">Carrito</a></button>
+                </article>
+                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
+                            src="/images/escabeche.jpg" alt="berenjena1"></a>
                     <h3>Berenjena funny</h3>
                     <p>Despertador berenjena con alarma graciosa.</p>
                     <h6>$1.000</h6>
                     <span>-20%</span>
                     <button><a href="/productDetail.html">Ver producto</a></button>
-                    <button><a href="/productCart.html">Carrito</a></button></article>
-                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img src="/images/San-Jacobos-de-berenjena.jpg" alt="berenjena1"></a>
+                    <button><a href="/productCart.html">Carrito</a></button>
+                </article>
+                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
+                            src="/images/San-Jacobos-de-berenjena.jpg" alt="berenjena1"></a>
                     <h3>Berenjena funny</h3>
                     <p>Despertador berenjena con alarma graciosa.</p>
                     <h6>$1.000</h6>
                     <span>-20%</span>
                     <button><a href="/productDetail.html">Ver producto</a></button>
-                    <button><a href="/productCart.html">Carrito</a></button></article>
+                    <button><a href="/productCart.html">Carrito</a></button>
+                </article>
             </div>
         </section>
-        
+
         <!-- <div class="contenedor-articulo">
 
             <article class="article-product">
@@ -249,8 +355,12 @@
             </div>
         </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>z
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>z
 </body>
 
 </html>
