agregando grid + login y register

--- a/views/home.html
+++ b/views/home.html
@@ -19,7 +19,9 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
 
     <!-- Vincular hoja  de estilos -->
     <link rel="stylesheet" href="/css/style.css">
@@ -62,164 +64,26 @@
                         <li class="nav-item"><a href="" class="nav-link">inicio</a></li>
                         <li class="nav-item"><a href="" class="nav-link">nosotros</a></li>
                         <li class="nav-item"><a href="" class="nav-link">contacto</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">ingresar</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">registrate</a></li>
+                        <li class="nav-item"><a href="/login" class="nav-link">ingresar</a></li>
+                        <li class="nav-item"><a href="/register" class="nav-link">registrate</a></li>
                     </ul>
                 </div>
 
             </div>
 
         </nav>
-
-
-        <!--<nav class='navegacion'>
-            <ul>
-                <li><a href="">inicio</a></li>
-                <li><a href="">nosotros</a></li>
-                <li><a href="">contacto</a></li>
-                <li><a href="">ingresar</a></li>
-                <li><a href="">registrate</a></li>
-            </ul>
-
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Navbar</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                            </li>
-                        </ul>
-                        <form class="d-flex">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
-                    </div>
-                </div>
-            </nav>
-
-        </nav>-->
     </header>
     <main>
-        <!-- caja -->
-        <div class="caja-hidden">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam optio nostrum dolor, veritatis possimus dolore enim molestiae vel, 
-                obcaecati laborum quo velit? Odio alias dolore perspiciatis veritatis quaerat consequuntur excepturi.
-            </p>
-        </div>
-        <!-- carousel -->
-        <div id="carouselExampleIndicators" class="carousel slide container " data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active d-flex">
-                    <section class="container">
-                        <div class="row contenedor-section">
-                            <article class="col-6 col-md-3 col-lg-2 article-product">
-                                <a href="/productDetail.html"><img src="/images/berenjena.jpg" alt="berenjena1"></a>
-                                <h3>Berenjena funny</h3>
-                                <p>Despertador berenjena con alarma graciosa.</p>
-                                <h6>$1.000</h6>
-                                <span>-20%</span>
-                                <button><a href="/productDetail.html">Ver producto</a></button>
-                                <button><a href="/productCart.html">Carrito</a></button>
-                            </article>
-
-                            <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
-                                        src="/images/berenjena-china.jpg" alt="berenjena1"></a>
-                                <h3>Berenjena funny</h3>
-                                <p>Despertador berenjena con alarma graciosa.</p>
-                                <h6>$1.000</h6>
-                                <span>-20%</span>
-                                <button><a href="/productDetail.html">Ver producto</a></button>
-                                <button><a href="/productCart.html">Carrito</a></button>
-                            </article>
-                            <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
-                                        src="/images/berenjena coraje.jpg" alt="berenjena1"></a>
-                                <h3>Berenjena funny</h3>
-                                <p>Despertador berenjena con alarma graciosa.</p>
-                                <h6>$1.000</h6>
-                                <span>-20%</span>
-                                <button><a href="/productDetail.html">Ver producto</a></button>
-                                <button><a href="/productCart.html">Carrito</a></button>
-                            </article>
-                        </div>
-                    </section>
-                    <!-- <img src="/images/banner-1.png" class="d-block w-50" alt="...">
-                <img src="/images/banner-2.png" class="d-block w-50 " alt="..."> -->
-                </div>
-                <div class="carousel-item">
-                    <section class="container">
-                        <div class="row contenedor-section">
-                            <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
-                                        src="/images/Brujo.png" alt="berenjena1"></a>
-                                <h3>Berenjena funny</h3>
-                                <p>Despertador berenjena con alarma graciosa.</p>
-                                <h6>$1.000</h6>
-                                <span>-20%</span>
-                                <button><a href="/productDetail.html">Ver producto</a></button>
-                                <button><a href="/productCart.html">Carrito</a></button>
-                            </article>
-                            <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
-                                        src="/images/escabeche.jpg" alt="berenjena1"></a>
-                                <h3>Berenjena funny</h3>
-                                <p>Despertador berenjena con alarma graciosa.</p>
-                                <h6>$1.000</h6>
-                                <span>-20%</span>
-                                <button><a href="/productDetail.html">Ver producto</a></button>
-                                <button><a href="/productCart.html">Carrito</a></button>
-                            </article>
-                            <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
-                                        src="/images/San-Jacobos-de-berenjena.jpg" alt="berenjena1"></a>
-                                <h3>Berenjena funny</h3>
-                                <p>Despertador berenjena con alarma graciosa.</p>
-                                <h6>$1.000</h6>
-                                <span>-20%</span>
-                                <button><a href="/productDetail.html">Ver producto</a></button>
-                                <button><a href="/productCart.html">Carrito</a></button>
-                            </article>
-                        </div>
-                    </section>
-                    <!-- <img src="/images/banner-2.png" class="d-block w-50" alt="..."> -->
-                </div>
-
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
         <!--Contenido de la página-->
-
+        
         <div class="container titulo-vendidos mas-vendidos">
             <h2>Los mas vendidos</h2>
         </div>
 
         <!-- productos -->
-        <section class="container">
-            <div class="row contenedor-section">
-                <article class="col-6 col-md-3 col-lg-2 article-product">
+        <section class="contenedor container">
+            <div class="contenedor-section">
+                <article class="article-product">
                     <a href="/productDetail.html"><img src="/images/berenjena.jpg" alt="berenjena1"></a>
                     <h3>Berenjena funny</h3>
                     <p>Despertador berenjena con alarma graciosa.</p>
@@ -229,54 +93,44 @@
                     <button><a href="/productCart.html">Carrito</a></button>
                 </article>
 
-                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
-                            src="/images/berenjena-china.jpg" alt="berenjena1"></a>
+                <article class="article-product"><a href="/productDetail.html"><img src="/images/berenjena-china.jpg" alt="berenjena1"></a>
                     <h3>Berenjena funny</h3>
                     <p>Despertador berenjena con alarma graciosa.</p>
                     <h6>$1.000</h6>
                     <span>-20%</span>
                     <button><a href="/productDetail.html">Ver producto</a></button>
-                    <button><a href="/productCart.html">Carrito</a></button>
-                </article>
-                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
-                            src="/images/berenjena coraje.jpg" alt="berenjena1"></a>
+                    <button><a href="/productCart.html">Carrito</a></button></article>
+                <article class="article-product"><a href="/productDetail.html"><img src="/images/berenjena coraje.jpg" alt="berenjena1"></a>
                     <h3>Berenjena funny</h3>
                     <p>Despertador berenjena con alarma graciosa.</p>
                     <h6>$1.000</h6>
                     <span>-20%</span>
                     <button><a href="/productDetail.html">Ver producto</a></button>
-                    <button><a href="/productCart.html">Carrito</a></button>
-                </article>
-                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
-                            src="/images/Brujo.png" alt="berenjena1"></a>
+                    <button><a href="/productCart.html">Carrito</a></button></article>
+                <article class="article-product"><a href="/productDetail.html"><img src="/images/Brujo.png" alt="berenjena1"></a>
                     <h3>Berenjena funny</h3>
                     <p>Despertador berenjena con alarma graciosa.</p>
                     <h6>$1.000</h6>
                     <span>-20%</span>
                     <button><a href="/productDetail.html">Ver producto</a></button>
-                    <button><a href="/productCart.html">Carrito</a></button>
-                </article>
-                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
-                            src="/images/escabeche.jpg" alt="berenjena1"></a>
+                    <button><a href="/productCart.html">Carrito</a></button></article>
+                <article class="article-product"><a href="/productDetail.html"><img src="/images/escabeche.jpg" alt="berenjena1"></a>
                     <h3>Berenjena funny</h3>
                     <p>Despertador berenjena con alarma graciosa.</p>
                     <h6>$1.000</h6>
                     <span>-20%</span>
                     <button><a href="/productDetail.html">Ver producto</a></button>
-                    <button><a href="/productCart.html">Carrito</a></button>
-                </article>
-                <article class="col-6 col-md-3 col-lg-2 article-product"><a href="/productDetail.html"><img
-                            src="/images/San-Jacobos-de-berenjena.jpg" alt="berenjena1"></a>
+                    <button><a href="/productCart.html">Carrito</a></button></article>
+                <article class="article-product"><a href="/productDetail.html"><img src="/images/San-Jacobos-de-berenjena.jpg" alt="berenjena1"></a>
                     <h3>Berenjena funny</h3>
                     <p>Despertador berenjena con alarma graciosa.</p>
                     <h6>$1.000</h6>
                     <span>-20%</span>
                     <button><a href="/productDetail.html">Ver producto</a></button>
-                    <button><a href="/productCart.html">Carrito</a></button>
-                </article>
+                    <button><a href="/productCart.html">Carrito</a></button></article>
             </div>
         </section>
-
+        
         <!-- <div class="contenedor-articulo">
 
             <article class="article-product">
@@ -355,12 +209,8 @@
             </div>
         </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>z
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>z
 </body>
 
 </html>
