--- a/views/login.html
+++ b/views/login.html
@@ -67,7 +67,9 @@
     </header>
     <main>
         <!--Contenido de la página-->
-        <p>comienzo del main</p>
+        <div class="article-product logeo">
+            holis
+        </div>
     </main>
     <!-- Pie de la página -->
     <footer class="piepagina">
