--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,138 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-/* Comienzo cuerpo de la pagina + elementos generales*/
-body{
-  background-color: #f1f1f1a6;
-}
-a{
-  text-decoration: none;       /* sacamos subrayado de las palabras linkeadas*/
-}
-ul li{
-  font-size: .8em;  
-  list-style: none;  
-}
-a:hover{
-  color: crimson;
-
-}
-/* Fin comienzo cuerpo de la pagina + elementos generales*/
-
-/* Comienzo de Cabecera */
-header{
-  height: auto;   /* height es el alto */
-  width: 100%;       /* Ancho del header */
-  background-color: #181818;
-  display: flex;   /* se hace flexible para poder modificarlo como quieras*/
-  justify-content: space-between;      /* le da una ubicacion ordenada a los elementos que esten dentro */
-  align-items: center;          /*centra los elementos*/
-  text-transform: uppercase;
-  box-shadow: 0px 0px 18px 0px rgba(190, 0, 207, 0.7);
-}
-
-header:hover{
-  box-shadow: 0px 0px 18px 0px rgba(0, 179, 54, 0.9)
-}
-
-.logo{
-  height: 5em;
-  width: auto;
-}
-
-a{
-  color:blueviolet
-}
-
-.buscador{
-  width: 23em;
-  height: auto;
-  border-radius: .5em 0 0 .5em;
-  padding-left: .5em
-}
-.formsearch{
-  height:2em;
-  display:flex;
-  align-items:center;
-  border-color: transparent;
-}
-
-.botonbuscar{
-  height:2em;
-  padding: 0 .8em;
-  background-color: blueviolet;
-  color:whitesmoke;
-  border-radius: 0 .5em .5em 0;
-  border-color: transparent;
-}
-.titulo a, .navegacion ul{
-  display: flex;
-  align-items: center;
-} 
-
-.navegacion ul{
-  font-size: 1.2em
-}
-
-.navegacion ul li{
-  margin:0px;
-  border-right: 1px solid #07c900;
-}
-
-.navegacion ul li:last-child{
-  border-right: none;
-}
-
-.navegacion ul li a{
-  font-family: 'Roboto', sans-serif;
-  padding: 0px;
-}
-
-h1{
-  font-family: 'Do Hyeon', sans-serif;
-  font-size: 1.4em;
-  margin:0
-}
-
-
-/* Comienzo del pie de pagina */
-footer{
-  height: auto;
-  background-color: #181818;
-  /*flex-direction: column;*/
-  /*justify-content: center;    justify mueve vertical */
-  align-items:flex-start;        /* y align horizontal */
-  font-size: 1.3em;
-}
-
-.piepagina{
-    display: flex;
-    justify-content: space-between;
-    text-align: start;
-    padding: 1.5em 1em;
-}
-
-.piepagina h4{
-    color: whitesmoke
-}
-
-.piepagina ul{
-    padding: 0;
-}
-.redes ul{
-  display:flex;
-  margin: .5em 0;
-  padding-inline-start: 0px;
-}
-
-.redes ul li a i{
-  margin-right:.3em;
-  font-size: 1.5em;
-}
-/* Fin pie de pagina */
-
 @media (max-width:425px){
   h1{
     font-size:.7em
@@ -182,8 +47,6 @@ footer{
 }
 
 main{
-  display: flex;
-  flex-direction: column;
   justify-content: center;
 }
 
@@ -192,12 +55,19 @@ main{
   width: 100%;
 }
 
-.contenedor-section {
+.contenedor{
   border-radius: 0.2em;
   background-color: #fff;
   border: #e2e2e2 1px solid;
   padding: 1em;
   margin-bottom: 1em;
+}
+
+.contenedor-section {
+  
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: .5em;
 }
   
 /*articulo*/
@@ -208,7 +78,6 @@ main{
   border-radius: .3em;
   box-shadow: 0px 0px 18px 0px rgba(190, 0, 207, 0.7);
   margin: auto;
-  width: 16%;
 }
 
 
@@ -227,12 +96,4 @@ main{
 .contenedor-articulo {
   display: flex;
   justify-content: space-between;
-}
-/* caja hidden */
-.caja-hidden{
-
-  height: 10em;
-  width: 10em;
-  border: solid 1px green;
-  overflow-y: scroll;
 }
