--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,2 +1,5 @@
 @import "./bootstrap.css";
-@import "./home.css"
+@import "./home.css";
+@import "./general.css";
+@import "./header.css";
+@import "./footer.css"
