--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,4 +2,5 @@
 @import "./home.css";
 @import "./general.css";
 @import "./header.css";
-@import "./footer.css"
+@import "./footer.css";
+@import "./login.css";
